--- a/ar-models.css
+++ b/ar-models.css
@@ -1,12 +1,52 @@
 body{
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+.viewer-container{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 380px;
+    height: 400px;
+    border-radius: 10px;
+}
+
 model-viewer{
+    background-color: #888;
     position: relative;
-    width: 100vw;
-    height: 50vh;
+    width: 360px;
+    height: 450px;
+    border-radius: 10px;
+    border-color: black;
+    border: 1px;
+}
+
+button{
+    background-color: white;
+    border-radius: 4px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 10px;
+    width: 150px;
+}
+
+.title{
+    background-color: whitesmoke;
+    width: 95%;
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    top: 10px;
+    text-align: center;
+    font-size: 1.5rem;
 }
