--- a/ar-models.css
+++ b/ar-models.css
@@ -1,4 +1,6 @@
 body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 700;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -6,23 +8,21 @@ body{
     justify-content: center;
 }
 
-.viewer-container{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    width: 380px;
-    height: 400px;
-    border-radius: 10px;
+.page-title{
+    width: 80%;
+    text-align:center;
 }
 
 model-viewer{
-    background-color: #888;
+    background-color: rgb(225, 225, 225);
     position: relative;
-    width: 360px;
+    max-width: 360px;
+    width: 95vw;
     height: 450px;
     border-radius: 10px;
     border-color: black;
     border: 1px;
+    margin: 5px 0;
 }
 
 button{
