--- a/ar-models.css
+++ b/ar-models.css
@@ -1,16 +1,24 @@
 body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Outfit", Arial, Helvetica, sans-serif;
     font-weight: 700;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .page-title{
     width: 80%;
     text-align:center;
+    font-weight: 300;
 }
 
 model-viewer{
@@ -18,7 +26,7 @@ model-viewer{
     position: relative;
     max-width: 360px;
     width: 95vw;
-    height: 450px;
+    min-height: 450px;
     border-radius: 10px;
     border-color: black;
     border: 1px;
