--- a/ar-models.css
+++ b/ar-models.css
@@ -7,12 +7,12 @@ body{
     align-items: center;
     justify-content: space-between;
 
-    /* -ms-overflow-style: none; */
-    /* scrollbar-width: none; */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 body::-webkit-scrollbar {
-    /* display: none; */
+    display: none;
 }
 
 .page-title{
